step 2 text updated

--- a/UI/src/app/config/project-config/jira-config/jira-config.component.html
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.html
@@ -150,7 +150,7 @@
                 <ng-template pTemplate="header">
                     <span class="p-d-flex p-justify-between w-100">
                         <!-- <div class="p-d-flex p-align-center"> -->
-                        <h3>STEP 2: Add a new Configuration</h3>
+                        <h3>STEP 2: Configure</h3>
                         <!-- </div> -->
                     </span>
                 </ng-template>
