--- a/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
+++ b/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
@@ -25,7 +25,7 @@
             *ngIf="(!router.url.split('/').includes('Config') && router.url !== '/dashboard/Error' && router.url !== '/dashboard/Help')"></app-nav-new>
         <app-filter-new
             *ngIf="(!router.url.split('/').includes('Config') && router.url !== '/dashboard/Error' && router.url !== '/dashboard/Help')"></app-filter-new>
-     <app-sticky-header class="header nav-filter-container"></app-sticky-header>
+     <app-sticky-header class="header nav-filter-container" *ngIf="(!router.url.split('/').includes('Config') && router.url !== '/dashboard/Error' && router.url !== '/dashboard/Help')"></app-sticky-header>
 
     <div id="wrapper" [ngClass]="sideNavStyle">
         <div id="page-content-wrapper"
