--- a/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
+++ b/UI/src/app/dashboardv2/dashboard-v2/dashboard-v2.component.html
@@ -36,7 +36,5 @@
         </div>
     </div>
 </div>
-<button id="go-to-top" title="Go to Top">
-    <i class="fa fa-arrow-up" aria-hidden="true"></i>
-  </button>
+    <p-scrollTop ></p-scrollTop>
 <app-footer></app-footer>
