--- a/UI/src/app/config/capacity-planning/capacity-planning.component.css
+++ b/UI/src/app/config/capacity-planning/capacity-planning.component.css
@@ -147,7 +147,6 @@
   
   :host ::ng-deep .custom-grid .p-datatable tbody tr.sprint {
     display: block;
-    width: 100%;
     padding: 5px;
     border-radius: 5px;
     margin: 10px 0px;
@@ -164,6 +163,12 @@
     padding-left: 0px;
     padding-right: 0px;
     white-space: nowrap;
+  }
+
+  :host ::ng-deep .capacity-table-container {
+    max-width: calc(100%);
+    max-height: 400px;
+    overflow: scroll;
   }
   
   :host ::ng-deep .capacity-table.custom-grid .p-datatable tbody tr.sprint {
