--- a/UI/src/app/config/project-config/jira-config/jira-config.component.html
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.html
@@ -56,9 +56,9 @@
                                 {{col.header}}
                             </th>
                             <th class="p-text-center" scope="col" *ngIf="formTitle?.toLowerCase() == 'jira' || formTitle?.toLowerCase() == 'jiratest' ||
-                            formTitle?.toLowerCase() == 'azure' || formTitle?.toLowerCase() == 'zephyr'">Edit</th>
+                            formTitle?.toLowerCase() == 'azure boards' || formTitle?.toLowerCase() == 'zephyr'">Edit</th>
                             <th class="p-text-center" scope="col" *ngIf="formTitle?.toLowerCase() !== 'jira' && formTitle?.toLowerCase() !== 'jiratest' &&
-                            formTitle?.toLowerCase() !== 'azure' && formTitle?.toLowerCase() !== 'zephyr'">Delete</th>
+                            formTitle?.toLowerCase() !== 'azure boards' && formTitle?.toLowerCase() !== 'zephyr'">Delete</th>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-tool let-columns="columns">
@@ -67,13 +67,13 @@
                                 {{tool[col.field]}}
                             </td>
                             <td *ngIf="formTitle?.toLowerCase() == 'jira' || formTitle?.toLowerCase() == 'jiratest' ||
-                            formTitle?.toLowerCase() == 'azure' || formTitle?.toLowerCase() == 'zephyr'">
+                            formTitle?.toLowerCase() == 'azure boards' || formTitle?.toLowerCase() == 'zephyr'">
                                 <div class="action-btns p-d-flex p-justify-center" (click)="editTool(tool)">
                                     <i class="far fa-edit"></i>
                                 </div>
                             </td>
                             <td *ngIf="formTitle?.toLowerCase() !== 'jira' && formTitle?.toLowerCase() !== 'jiratest' &&
-                            formTitle?.toLowerCase() !== 'azure' && formTitle?.toLowerCase() !== 'zephyr'">
+                            formTitle?.toLowerCase() !== 'azure boards' && formTitle?.toLowerCase() !== 'zephyr'">
                                 <div  class="action-btns p-d-flex p-justify-center" (click)="confirmDeteleTool(tool)">
                                     <i class="far fa-trash-alt"></i>
                                 </div>
