--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -25,6 +25,7 @@
         <label class="floating-label" for="multiselectFilter">Select {{ selectedLevel }}</label>
     </span>
     <span *ngIf="primaryFilterConfig && primaryFilterConfig['type'] === 'singleSelect'" class="p-float-label">
+      <ng-container *ngIf="filters.length > 0">
         <p-dropdown *ngIf="selectedFilters" inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select"  optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
@@ -53,5 +54,6 @@
             {{ selectedLevel?.emittedLevel }}
           </ng-template>
         </label>
+      </ng-container>
     </span>
 </div>
