capacity screenc layout

--- a/UI/src/app/config/capacity-planning/capacity-planning.component.html
+++ b/UI/src/app/config/capacity-planning/capacity-planning.component.html
@@ -309,7 +309,7 @@
                                             </div>
                                         </th>
                                         <th scope="col" pSortableColumn="email" class="expanded-table-header-cell"
-                                            [style]="{'width':'25%'}">
+                                            [style]="{'min-width':'170px'}">
                                             <div>
                                                 <span [ngClass]="{'editable': projectCapacityEditMode}">Email Id</span>
                                             </div>
@@ -367,12 +367,12 @@
                                             '-
                                             -'}}</td>
                                         <td class="expanded-table-body-cell"
-                                            [style]="{'max-width':'120px', 'word-wrap': 'break-word'}">
+                                            [style]="{'min-width':'170px', 'word-wrap': 'break-word'}">
 
                                             <p-multiSelect [options]="projectAssigneeEmailsCopy"
                                                 *ngIf="projectCapacityEditMode;else showUserEmail"
                                                 defaultLabel="Select Emails" class="multiselect-custom"
-                                                [style]="{'width':'150px'}" display="chip" showClear="true"
+                                                [style]="{'width':'160px'}" display="chip" showClear="true"
                                                 optionLabel="name" optionValue="value"
                                                 [formControl]="selectedSprintAssigneFormArray[rowIndex]?.email"
                                                 (onChange)="calculateAvaliableCapacity(assignee,this.selectedSprintAssigneFormArray[rowIndex],'email')"
