--- a/UI/src/app/config/capacity-planning/capacity-planning.component.css
+++ b/UI/src/app/config/capacity-planning/capacity-planning.component.css
@@ -166,9 +166,14 @@
   }
 
   :host ::ng-deep .capacity-table-container {
-    max-width: calc(100%);
-    max-height: 400px;
-    overflow: scroll;
+    overflow: scroll; 
+  }
+
+  @media only screen and (max-width: 1600px){
+    :host ::ng-deep .capacity-table-container {
+      max-width: 1100px;
+      overflow: scroll; 
+    }
   }
   
   :host ::ng-deep .capacity-table.custom-grid .p-datatable tbody tr.sprint {
