selected sprint/squad shown at top

--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -4,7 +4,7 @@
             optionLabel="nodeName" [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}"
             [selectionLimit]="6" [selectedItemsLabel]="'{0} selected'" defaultLabel="Select"
             [panelStyle]="{ 'min-width': 'min(100vw, 300px)' }" [appendTo]="filterDiv" [resetFilterOnHide]="true"
-            (onChange)="moveSelectedOptionToTop($event)">
+            (onChange)="onSelectionChange($event)" (onPanelShow)="moveSelectedOptionToTop()">
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <div>
