--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -9,7 +9,7 @@
                 [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}"
                 defaultLabel="Select" [optionLabel]="'nodeName'" [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }"
                 [appendTo]="addnlFilterDiv" [(ngModel)]="selectedFilters[i]" [options]="filterData[i]"
-                (onChange)="moveSelectedOptionToTop($event, i)">
+                (onChange)="onSelectionChange($event, i)" (onPanelShow)="moveSelectedOptionToTop($event, i)">
                 <ng-template pTemplate="footer">
                     <div class="p-p-3 p-text-right">
                         <p-button label="Apply" (onClick)="applyAdditionalFilter(selectedFilters, i + 1, true)"
