--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -127,29 +127,29 @@
     </div>
 
     <div class="date-filter-container cursor-pointer" *ngIf="kanban || selectedTab?.toLowerCase() === 'developer'">
-      <!-- Date filter start -->
-      <div class="position-relative">
-        <div class="p-d-flex p-align-center p-p-2 rounded p-ml-2 date-filter-btn" #dateToggleButton
-          [ngClass]="{'active': toggleDateDropdown}" (click)="toggleDateDropdown = !toggleDateDropdown">
-          <i class="pi pi-calendar-plus p-mr-2"></i>
-          Date Filter
-        </div>
-        <div class="filter-options-container date-filter-dropdown" *ngIf="toggleDateDropdown" #dateDrpmenu>
-          <div class="filter-options filter-date p-d-flex p-jc-evenly">
-            <p-dropdown [styleClass]="'date-filter-ddn'" [options]="dateRangeFilter?.counts"
-              [(ngModel)]="selectedDateValue"></p-dropdown>
-            <p-dropdown [styleClass]="'date-filter-ddn'" [options]="dateRangeFilter?.types"
-              [(ngModel)]="selectedDayType" (onChange)="setSelectedDateType($event.value)"></p-dropdown>
+      <div *ngIf="!(selectedTab?.toLowerCase() === 'dora' && kanban)">
+        <div class="position-relative">
+          <div class="p-d-flex p-align-center p-p-2 rounded p-ml-2 date-filter-btn" #dateToggleButton
+            [ngClass]="{'active': toggleDateDropdown}" (click)="toggleDateDropdown = !toggleDateDropdown">
+            <i class="pi pi-calendar-plus p-mr-2"></i>
+            Date Filter
           </div>
-          <div class="p-d-flex p-justify-end p-align-center btn-container">
-            <button pButton pRipple label="Apply" class="p-button-secondary p-button-sm btn-apply p-mr-1"
-              (click)="applyDateFilter()"></button>
-              <button pButton pRipple label="Cancel" class="p-button-secondary p-button-sm btn-apply"
-              (click)="closeDateFilterModel()"></button>
+          <div class="filter-options-container date-filter-dropdown" *ngIf="toggleDateDropdown" #dateDrpmenu>
+            <div class="filter-options filter-date p-d-flex p-jc-evenly">
+              <p-dropdown [styleClass]="'date-filter-ddn'" [options]="dateRangeFilter?.counts"
+                [(ngModel)]="selectedDateValue"></p-dropdown>
+              <p-dropdown [styleClass]="'date-filter-ddn'" [options]="dateRangeFilter?.types"
+                [(ngModel)]="selectedDayType" (onChange)="setSelectedDateType($event.value)"></p-dropdown>
+            </div>
+            <div class="p-d-flex p-justify-end p-align-center btn-container">
+              <button pButton pRipple label="Apply" class="p-button-secondary p-button-sm btn-apply p-mr-1"
+                (click)="applyDateFilter()"></button>
+                <button pButton pRipple label="Cancel" class="p-button-secondary p-button-sm btn-apply"
+                (click)="closeDateFilterModel()"></button>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Date filter end -->
     </div>
   </div>
 </div>
