--- a/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.html
@@ -1,10 +1,10 @@
 <div #parentFilterDiv>
     <span class="p-float-label">
-        <p-dropdown [options]="options" [(ngModel)]="selectedLevel" optionValue="label" filter="true" inputId="singleselectParentFilter"
+        <p-dropdown [options]="filterLevels" optionLabel="nodeName" [(ngModel)]="selectedLevel" filter="true" inputId="singleselectParentFilter"
             placeholder="Select {{ parentFilterConfig['name'] }}"
             [style]="{'width':'280px', 'max-width': '100%', 'height': '40px'}"
             [panelStyle]="{ 'min-width': 'min(100vw, 250px)' }" 
-            (onChange)="handleSelectedLevelChange()" [appendTo]="parentFilterDiv">
+            (onChange)="handleSelectedLevelChange(true)" [appendTo]="parentFilterDiv">
         </p-dropdown>
         <label class="floating-label" for="singleselectParentFilter">Select {{ parentFilterConfig['labelName']
             }}</label>
