--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -44,10 +44,11 @@
                 </div>
             </ng-template>
         </p-dropdown>
+        
         <label class="floating-label" for="singleselectFilter" [hidden]="selectedTab === 'iteration' || !selectedFilters?.length">
           Select
-          <ng-container *ngIf="selectedLevel === 'project'; else objectTemplate">
-            {{ selectedLevel }}
+          <ng-container *ngIf="!selectedLevel || isString(selectedLevel); else objectTemplate">
+            {{ selectedLevel || 'Project' }}
           </ng-container>
           <ng-template #objectTemplate>
             {{ selectedLevel?.emittedLevel }}
