--- a/UI/src/app/dashboardv2/nav-v2/nav-new.component.css
+++ b/UI/src/app/dashboardv2/nav-v2/nav-new.component.css
@@ -26,3 +26,7 @@
     color: #fff;
     border-color: #D5DBE1;
 }
+
+::ng-deep .board-menu .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight {
+    pointer-events: none;
+}
