--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -76,17 +76,25 @@
       <div class="min-ht" *ngIf="!loader && !immediateLoader && !checkIfDataPresent(trendValueList) && kpiData?.kpiDetail?.isAdditionalFilterSupport">
         <div class="p-w-100  p-d-flex p-justify-center">
           <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
+          <p>{{ kpiDataStatusCode }}</p>
         </div>
-        <div class="p-w-100">
-          <h4 class="p-text-center">No data available. Contact your administrator.</h4>
+        <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
+          <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'202'" class="p-text-center">Mandatory Field Mapping not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'201'" class="p-text-center">Required Tool not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'200'" class="p-text-center">No Data Available.</h4>
         </div>
       </div>
       <div class="min-ht" *ngIf="!loader && !immediateLoader && !checkIfDataPresent(trendValueList) && !kpiData?.kpiDetail?.isAdditionalFilterSupport && !iSAdditionalFilterSelected">
         <div class="p-w-100  p-d-flex p-justify-center">
           <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
+          <p>{{ kpiDataStatusCode }}</p>
         </div>
-        <div class="p-w-100">
-          <h4 class="p-text-center">No data available. Contact your administrator.</h4>
+        <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
+          <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'202'" class="p-text-center">Mandatory Field Mapping not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'201'" class="p-text-center">Required Tool not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'200'" class="p-text-center">No Data Available.</h4>
         </div>
       </div>
       <div class="min-ht" *ngIf="!kpiData?.kpiDetail?.isAdditionalFilterSupport && iSAdditionalFilterSelected">
