--- a/UI/src/app/features/authentication/login/login.component.css
+++ b/UI/src/app/features/authentication/login/login.component.css
@@ -97,7 +97,7 @@
 
 .login-intro {
     width: 100%;
-    background: #f3f3f5 url('../../../assets/img/bg-login.jpg') no-repeat 100% 100%;
+    background: #f3f3f5 url('.././../../../assets/img/bg-login.jpg') no-repeat 100% 100%;
     background-size: 70%;
     height: 100vh;
 }
@@ -156,7 +156,7 @@
     margin: -72px auto;
     color: var(--color-white);
     border-radius: 2px;
-    background-image: url('../../../assets/img/logo.png');
+    background-image: url('.././../../../assets/img/logo.png');
     background-repeat: no-repeat;
 }
 
