--- a/UI/src/app/features/authentication/login/login.component.html
+++ b/UI/src/app/features/authentication/login/login.component.html
@@ -18,11 +18,11 @@
 
 <div class="login" fxFlex>
   <div class="login-intro" fxFlex fxHide fxShow.gt-xs>
-    <img src="../../../assets/img/ps-logo.svg" alt="Publicis Sapient" class="ps-logo"/>
+    <img src=".././../../../assets/img/ps-logo.svg" alt="Publicis Sapient" class="ps-logo"/>
     <div class="p-grid">
 
         <div class="login-form-wrapper p-lg-5 p-sm-7 p-xl-4">
-          <img src="../../../assets/img/knowHOW_logo_final.png" alt="Publicis Sapient" class="knowHowImage">
+          <img src=".././../../../assets/img/knowHOW_logo_final.png" alt="Publicis Sapient" class="knowHowImage">
           <div class="login-form">
            <!-- Display error messages-->
            <div *ngIf="error" class="alert alert-danger w-100 p-mb-0">{{error}}</div>
