--- a/UI/src/app/features/config/rating/rating.component.css
+++ b/UI/src/app/features/config/rating/rating.component.css
@@ -43,27 +43,27 @@ form#ratingForm{
   }
   
   form#ratingForm input[type=radio].ecstatic {
-    background: url("../../../assets/img/smiley-5.svg") center;
+    background: url("../../../../assets/img/smiley-5.svg") center;
     background-size: cover;
   }
   
   form#ratingForm input[type=radio].happy {
-    background: url("../../../assets/img/smiley-4.svg") center;
+    background: url("../../../../assets/img/smiley-4.svg") center;
     background-size: cover;
   }
   
   form#ratingForm input[type=radio].neutral {
-    background: url("../../../assets/img/smiley-3.svg") center;
+    background: url("../../../../assets/img/smiley-3.svg") center;
     background-size: cover;
   }
   
   form#ratingForm input[type=radio].sad {
-    background: url("../../../assets/img/smiley-2.svg") center;
+    background: url("../../../../assets/img/smiley-2.svg") center;
     background-size: cover;
   }
   
   form#ratingForm input[type=radio].disappointed {
-    background: url("../../../assets/img/smiley-1.svg") center;
+    background: url("../../../../assets/img/smiley-1.svg") center;
     background-size: cover;
   }
 
