--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -76,7 +76,6 @@
       <div class="min-ht" *ngIf="!loader && !immediateLoader && !checkIfDataPresent(trendValueList) && kpiData?.kpiDetail?.isAdditionalFilterSupport">
         <div class="p-w-100  p-d-flex p-justify-center">
           <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
-          <p>{{ kpiDataStatusCode }}</p>
         </div>
         <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
           <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
@@ -88,7 +87,6 @@
       <div class="min-ht" *ngIf="!loader && !immediateLoader && !checkIfDataPresent(trendValueList) && !kpiData?.kpiDetail?.isAdditionalFilterSupport && !iSAdditionalFilterSelected">
         <div class="p-w-100  p-d-flex p-justify-center">
           <img alt="no-data" src="../../../assets/img/NoDataFound.svg" />
-          <p>{{ kpiDataStatusCode }}</p>
         </div>
         <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
           <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
@@ -155,7 +153,12 @@
       </ng-container>
       <ng-template #showNoDataMessage>
         <img alt="no-data" src="../../../assets/img/setting-icon.svg" />
-        <h2 class="p-text-center">No data available. Contact your administrator.</h2>
+        <div class="p-w-100" [ngSwitch]="kpiDataStatusCode">
+          <h4 *ngSwitchCase="'400'" class="p-text-center">KPI Analysis failed. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'202'" class="p-text-center">Required Tool not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'201'" class="p-text-center">Mandatory Field Mapping not configured. Contact your administrator.</h4>
+          <h4 *ngSwitchCase="'200'" class="p-text-center">No Data Available.</h4>
+        </div>
       </ng-template>
     </p-tabView>
 
